2005-05-06  Alex Roitman  <shura@gramps-project.org>
	* acinclude.m4: Copy macro for GCONF configuration from gconf2-dev;
	add --disable-mime-install and --enable-packager-mode arguments.
	* configure.in: Call new macros; Remove obsolete French and Russian
	manuals for the time being.
	* doc/gramps-manual/Makefile.am: Remove obsolete manuals.
	* src/data/Makefile.am: Conditional installation of gconf keys and
	mime types.
	* src/po/da.po: Typos preventing make.
	* NEWS: Update.
	* README: Update.

2005-05-06  Larry Allingham  <lallingham@woh.rr.com>
	* doc/gramps-manual/C/authors.xml, doc/gramps-manual/C/faq.xml,
	doc/gramps-manual/C/mainwin.xml, doc/gramps-manual/C/usage.xml:
	Typos and corrections.

2005-05-06  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcomp.py: Handle inline sources better in GEDCOM files
	* src/ReportUtils.py: check for spouse existance before creating a
	marriage string - return an empty string instead.
	* src/ReadXML.py: fix handling of non-gregorian dates
	* src/EditPerson.py: faster building of place lists using cursors

2005-05-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (undo): Block signals during undo to make
	it MUCH faster when undoing larger imports or plugin runs
	
2005-05-05  Alex Roitman  <shura@gramps-project.org>
	* doc/gramps.1.in, doc/gramps-manual/C/bugs.xml,
	doc/gramps-manual/C/cmdline.xml, doc/gramps-manual/C/faq.xml,
	doc/gramps-manual/C/getstart.xml, 
	doc/gramps-manual/C/gramps-manual.xml,
	doc/gramps-manual/C/mainwin.xml,
	doc/gramps-manual/C/preface.xml: Update.

2005-05-05  Don Allingham  <don@gramps-project.org>
	* src/plugins/PatchNames.py: handle multiple titles (bug 1196056)
	* src/plugins/ReorderIDs.py: bring up to speed with new handle/id methodology,

2005-05-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py: Fix copy-n-paste errors;
	dont crash on empty database

2005-05-04  Alex Roitman  <shura@gramps-project.org>